force-app/main/default/objects/leankor__KanbanCard__c/leankor__KanbanCard__c.object-meta.xml
<CustomObject>
    <description>This is like a task to be completed. It could also be a deliverable or item to be manufactured. It all depends on the context of the lean value stream.</description>
    <label>Kanban Card</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Kanban Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>