force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__AcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>leankor__AcceptanceCriteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a Acceptance Criteria to be shown on this kanban card when placed on a value stream</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>