force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Account__c.field-meta.xml
<CustomField>
    <fullName>leankor__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account requesting this project or product.</description>
    <inlineHelpText>Select the account to which this project or product is related.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>KanbanCards</relationshipName>
    <type>Lookup</type>
</CustomField>