force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Actual_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>leankor__Actual_Time_Taken__c</fullName>
    <description>This field shows &apos;Actual taken time&apos; while completing task/tasks on the &apos;KanbanCard&apos;.
This field works like- (PromiseCompletionDate- CreatedDate)</description>
    <formula>IF(DATEVALUE( leankor__PromiseCompletionDate__c )=DATEVALUE(CreatedDate), leankor__PromiseCompletionDate__c - CreatedDate  ,8*IF( ISNULL( DATEVALUE( leankor__PromiseCompletionDate__c ) ) ,CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Today() - DATEVALUE(CreatedDate) )/7)*5) ,CASE(MOD( DATEVALUE(CreatedDate) -DATE(1985,6,24),7), 
  0 , CASE( MOD( DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) -DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD(  DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( DATEVALUE( leankor__PromiseCompletionDate__c ) - DATEVALUE(CreatedDate) )/7)*5)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows &apos;Actual taken time&apos; while completing task/tasks on the &apos;KanbanCard&apos;.
This field works like- (PromiseCompletionDate- CreatedDate)</inlineHelpText>
    <label>Actual Time Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>