force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ActualDuration__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActualDuration__c</fullName>
    <description>The difference between the time it took to complete the card (from create date to harvey ball completed) and the estimated time the user entered into the estimated duration field.</description>
    <formula>leankor__Actual_Time_Taken__c- leankor__Budgeted_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the time it took to complete the card (from create date to harvey ball completed) and the estimated time the user entered into the estimated duration field.</inlineHelpText>
    <label>Duration Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>