force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__BoardType__c.field-meta.xml
<CustomField>
    <fullName>leankor__BoardType__c</fullName>
    <formula>TEXT(leankor__ValueStream__r.leankor__BoardType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Type</label>
    <type>Text</type>
</CustomField>