force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Bottom__c.field-meta.xml
<CustomField>
    <fullName>leankor__Bottom__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The coordinate of the bottom of the kanban. This is usually not used, as &quot;top&quot; and &quot;left&quot; are used by the interface to position the cards.</description>
    <inlineHelpText>The coordinate of the bottom of the kanban. This is usually not used, as &quot;top&quot; and &quot;left&quot; are used by the interface to position the cards. Zero is a good default value here.</inlineHelpText>
    <label>Bottom</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>