force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Budgeted_Time__c.field-meta.xml
<CustomField>
    <fullName>leankor__Budgeted_Time__c</fullName>
    <description>This field shows total time given to complete the task/tasks on &apos;KanbanCard&apos;.</description>
    <formula>if(TEXT(leankor__DurationUnits__c)==&quot;Minutes&quot;,(leankor__EstimatedDuration__c/60),leankor__EstimatedDuration__c*if(TEXT(leankor__DurationUnits__c)==&quot;Hours&quot;,1,if(TEXT(leankor__DurationUnits__c)==&quot;Days&quot;,8,if(TEXT(leankor__DurationUnits__c)==&quot;Weeks&quot;,5*8,if(TEXT(leankor__DurationUnits__c)==&quot;Months&quot;,20*8,12*20*8)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows total time given to complete the task/tasks on &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Budgeted Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>