force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__BudgetTimeComplete__c.field-meta.xml
<CustomField>
    <fullName>leankor__BudgetTimeComplete__c</fullName>
    <description>The Kanban card actual duration complete in hours.</description>
    <formula>leankor__Budgeted_Time__c *  leankor__PercentComplete2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Kanban card actual duration complete in hours.</inlineHelpText>
    <label>BudgetTime Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>