force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__BudgetTimeRemaining__c.field-meta.xml
<CustomField>
    <fullName>leankor__BudgetTimeRemaining__c</fullName>
    <description>The Kanban card actual duration remaining in hours.</description>
    <formula>leankor__Budgeted_Time__c * (1 - leankor__PercentComplete2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Kanban card actual duration remaining in hours.</inlineHelpText>
    <label>BudgetTime Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>