force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CardDetails__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardDetails__c</fullName>
    <description>This is a concatenation field of name of card, category, due date, percent complete.</description>
    <formula>Name &amp; &quot;, Category: &quot; &amp; leankor__KanbanCardTemplate__r.leankor__Title__c &amp; &quot;, Card Due Date: &quot; &amp; TEXT(DATEVALUE(leankor__DueDateTime__c)) &amp; &quot;, Percent Complete:&quot; &amp; TEXT(leankor__PercentComplete2__c*100) &amp;&quot;%&quot;</formula>
    <inlineHelpText>This is a concatenation field of name of card, category, due date, percent complete.</inlineHelpText>
    <label>Card Details</label>
    <type>Text</type>
</CustomField>