force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CardID__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardID__c</fullName>
    <description>This a text field which contain User defined ID on Card .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This a text field which contain User defined ID on Card .</inlineHelpText>
    <label>ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>