force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Case__c.field-meta.xml
<CustomField>
    <fullName>leankor__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field gives reference of related case with &apos;KanbanCard&apos;.</description>
    <inlineHelpText>This field gives reference of related case with &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>