force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CmpID__c.field-meta.xml
<CustomField>
    <fullName>leankor__CmpID__c</fullName>
    <defaultValue>&quot;kanban-1&quot;</defaultValue>
    <description>The HTML identifier of this kanban card the last time it existed on a web page. This value is saved for future use, so for uniquely identifying kanban cards please use GUID.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a unique name such as &quot;kanban-1&quot; for this card. The name need not be unique across the global system, just unique within the value stream.</inlineHelpText>
    <label>Component ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>