force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Color__c.field-meta.xml
<CustomField>
    <fullName>leankor__Color__c</fullName>
    <description>Color value of kanban card taken from the kanban card template</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This value defaults to the value on the kanban card template, but you can override it here.</inlineHelpText>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>