force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CompletionVariance__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletionVariance__c</fullName>
    <description>The difference between the target completion date and the actual date in which the card was marked done using the harvey balls.</description>
    <formula>(DATEVALUE(leankor__DueDateTime__c) -(IF(ISNULL(leankor__HarveyBallDoneDate__c),TODAY(),leankor__HarveyBallDoneDate__c) ))/IF((DATEVALUE(leankor__DueDateTime__c) - DATEVALUE(CreatedDate)==0), 1,(DATEVALUE(leankor__DueDateTime__c) - DATEVALUE(CreatedDate)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the target completion date and the actual date in which the card was marked done using the harvey balls.</inlineHelpText>
    <label>Completion Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>