force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Contact__c.field-meta.xml
<CustomField>
    <fullName>leankor__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a reference of Contacts on the &apos;KanbanCard&apos;.</description>
    <inlineHelpText>This field is a reference of Contacts on the &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>