force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CostofCompletedWork__c.field-meta.xml
<CustomField>
    <fullName>leankor__CostofCompletedWork__c</fullName>
    <description>Number hours completed multiplied by the fully loaded hourly cost of the card owner.</description>
    <formula>leankor__BudgetTimeComplete__c *  Owner:User.leankor__Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number hours completed multiplied by the fully loaded hourly cost of the card owner.</inlineHelpText>
    <label>Cost of Completed Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>