force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__CSSLayout__c.field-meta.xml
<CustomField>
    <fullName>leankor__CSSLayout__c</fullName>
    <description>This is the specific cascading style sheet (CSS) layout for the kanban card. It can be derived from the CSS Layout of the kanban card template.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Modify this CSS to suit your needs. It was derived from the kanban card template CSS Layout field, so if you ever need to revert, it&apos;s only a click away.</inlineHelpText>
    <label>CSS Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>