force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__DateColor__c.field-meta.xml
<CustomField>
    <fullName>leankor__DateColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateColor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>