force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Description__c.field-meta.xml
<CustomField>
    <fullName>leankor__Description__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>A short description to display in description of the kanban card.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a description to be shown on this kanban card when placed on a value stream.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>