force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__DescriptionLong__c.field-meta.xml
<CustomField>
    <fullName>leankor__DescriptionLong__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>A long description to display in description of the kanban card.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A description of the work to be done.</inlineHelpText>
    <label>Detailed Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>