force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__DueDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDate__c</fullName>
    <defaultValue>Today() + 5</defaultValue>
    <description>The deadline for the project or deliverable expressed as a date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the deadline for the project or deliverable as a date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>