force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDateTime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The deadline for the project or deliverable expressed as a datetime.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The due date of the work item.</inlineHelpText>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>