force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__DurationUnits__c.field-meta.xml
<CustomField>
    <fullName>leankor__DurationUnits__c</fullName>
    <description>The unit of measure for the Estimated Duration value.</description>
    <inlineHelpText>Enter the unit of measure for the Estimated Duration value.</inlineHelpText>
    <label>Duration Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>