force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__EffortRemaining__c.field-meta.xml
<CustomField>
    <fullName>leankor__EffortRemaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contains values of Remaining Efforts on &apos;KanbanCard&apos;.</description>
    <inlineHelpText>This field contains values of Remaining Efforts on &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Effort Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>