force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__EffortRemainingTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__EffortRemainingTime__c</fullName>
    <description>This fields converts Effort Remaining Value in to Time ( 1 Day = 8 Hrs.)</description>
    <formula>if(TEXT(leankor__DurationUnits__c)==&quot;Minutes&quot;,(leankor__EffortRemaining__c/60),leankor__EffortRemaining__c*if(TEXT(leankor__DurationUnits__c)==&quot;Hours&quot;,1, leankor__WorkingDays__c*8))</formula>
    <inlineHelpText>This fields converts Effort Remaining Value in to Time ( 1 Day = 8 Hrs.)</inlineHelpText>
    <label>Effort Remaining Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>