force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__EstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>leankor__EstimatedDuration__c</fullName>
    <description>The estimated number of days, weeks, months it will take to complete the project or unit of work.</description>
    <inlineHelpText>Enter estimated number of days, weeks, months it will take to complete the project or unit of work. This will default to the Lead Time of the zone when the kanban card enters it.</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>