force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__FinancialBudgetRemaining__c.field-meta.xml
<CustomField>
    <fullName>leankor__FinancialBudgetRemaining__c</fullName>
    <description>Number hours remaining on the card multiplied by the fully loaded cost of the owner of the card.</description>
    <formula>leankor__BudgetTimeRemaining__c *  Owner:User.leankor__Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number hours remaining on the card multiplied by the fully loaded cost of the owner of the card.</inlineHelpText>
    <label>Financial Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>