force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Folder__c.field-meta.xml
<CustomField>
    <fullName>leankor__Folder__c</fullName>
    <description>The name of the folder where the item is located.</description>
    <formula>leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__Portfolio__r.Name</formula>
    <inlineHelpText>The folder where the item resides.</inlineHelpText>
    <label>Folder</label>
    <type>Text</type>
</CustomField>