force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__HarveyBallDoneDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__HarveyBallDoneDate__c</fullName>
    <description>This field shows Date when all tasks Done on &apos;KanbanCard&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field shows Date when all tasks Done on &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Harvey Ball Done Date</label>
    <type>Date</type>
</CustomField>