force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsAtRisk__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsAtRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>