force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsCompletedOnTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsCompletedOnTime__c</fullName>
    <description>This field shows Date when KanbanCard completed by Harvey Ball.</description>
    <formula>IF(DATEVALUE(leankor__DueDateTime__c)&gt;=(IF(ISNULL(leankor__HarveyBallDoneDate__c),TODAY(),leankor__HarveyBallDoneDate__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows Date when KanbanCard completed by Harvey Ball.</inlineHelpText>
    <label>IsCompletedOnTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>