force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsConstraintRecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsConstraintRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConstraintRecalculate</label>
    <type>Checkbox</type>
</CustomField>