force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsExternallyDependent__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsExternallyDependent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the item is externally dependent or not. An externally dependent item has a dependency outside of the project.</description>
    <label>IsExternallyDependent</label>
    <type>Checkbox</type>
</CustomField>