force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsOnHold__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an item is on hold or not.</description>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>