force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__IsSuccessorRecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsSuccessorRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator to recalculate dependency schedules of successors.</description>
    <label>IsSuccessorRecalculate</label>
    <type>Checkbox</type>
</CustomField>