force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__JSONData__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONData__c</fullName>
    <description>Stores the extended data which is defined by metadata in JSONDefinition</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the JSON representation of any data which should populate the kanban card in the extended field list</inlineHelpText>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>