force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__JSONDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDefinition__c</fullName>
    <description>The JSON definition of a kanban card template expressed as a valid Sencha Touch 2 &quot;config&quot; block of a Tab Panel Class .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter valid JSON which expresses as Sencha Touch 2 &quot;config&quot; block of the Tab Panel Class. It can then be used to tailor the kanban card.</inlineHelpText>
    <label>JSON Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>