force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__KanbanCardTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template from which the kanban card derives its main characteristics.</description>
    <inlineHelpText>Select the template which helps form this kanban card.</inlineHelpText>
    <label>Category</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>KanbanCards</relationshipName>
    <type>Lookup</type>
</CustomField>