force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Left__c.field-meta.xml
<CustomField>
    <fullName>leankor__Left__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The left coordinate of the kanban card on the value stream surface. Usually, left is identical to the &quot;x&quot; coordinate.</description>
    <inlineHelpText>Enter the left most position of the kanban card. It should equal the &quot;x&quot; value as well.</inlineHelpText>
    <label>Left</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>