force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__MasterContainer__c.field-meta.xml
<CustomField>
    <fullName>leankor__MasterContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Master Container ID in which card is present.</description>
    <inlineHelpText>The stage of the work item.</inlineHelpText>
    <label>Master Container</label>
    <referenceTo>leankor__MasterContainer__c</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>