force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__OnQuality__c.field-meta.xml
<CustomField>
    <fullName>leankor__OnQuality__c</fullName>
    <label>On Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amber</fullName>
                <color>#FF9900</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>