force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>leankor__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a reference of Opportunity on the &apos;KanbanCard&apos;.</description>
    <inlineHelpText>This field is a reference of Opportunity on the &apos;KanbanCard&apos;.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>