force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__OriginalFinancialBudget__c.field-meta.xml
<CustomField>
    <fullName>leankor__OriginalFinancialBudget__c</fullName>
    <description>Budgeted Time (hours) multiplied by the Card owner&apos;s fully loaded hourly cost.</description>
    <formula>Owner:User.leankor__Rate__c * leankor__Budgeted_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budgeted Time (hours) multiplied by the Card owner&apos;s fully loaded hourly cost.</inlineHelpText>
    <label>Original Financial Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>