force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__PercentComplete2__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentComplete2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field shows how much task has been completed? It reflects on Harvey Ball.</description>
    <inlineHelpText>Field shows how much task has been completed? It reflects on Harvey Ball.</inlineHelpText>
    <label>PercentComplete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>