force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Point__c.field-meta.xml
<CustomField>
    <fullName>leankor__Point__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This Field contains Point of cards for agile mode feature.</description>
    <inlineHelpText>This Field contains Point of cards for agile mode feature.</inlineHelpText>
    <label>Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>