force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Priority__c.field-meta.xml
<CustomField>
    <fullName>leankor__Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The priority of the work item or project expressed as 1, 2 or 3.  Each kanban card will show either 1, 2 or 3 stars at the bottom left of the card to signify priority.</description>
    <inlineHelpText>Priority 3 is highest. Enter the priority of the work item or project expressed as 1, 2 or 3.  Each card will show either 1, 2 or 3 stars at the bottom left of the card.</inlineHelpText>
    <label>Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>