force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__PriorityDescription__c.field-meta.xml
<CustomField>
    <fullName>leankor__PriorityDescription__c</fullName>
    <description>Description of priority as a formula field.</description>
    <formula>CASE(leankor__Priority__c, 1, &quot;Critical&quot;, 2, &quot;Medium&quot;, 3, &quot;Low&quot;, &quot;None&quot;)</formula>
    <label>Priority</label>
    <type>Text</type>
</CustomField>