force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ProjectRoom__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectRoom__c</fullName>
    <description>The room or project where the board resides.</description>
    <formula>leankor__ValueStream__r.leankor__ProjectRoom__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>